--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -4,10 +4,16 @@
   align-items: center;
   height: 100vh;
 }
-.main{
+//.main{
+//  margin-top: 24px;
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  height: 100vh;
+//}
+.main {
   margin-top: 24px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
