--- a/src/features/cards/Card.scss
+++ b/src/features/cards/Card.scss
@@ -1,5 +1,9 @@
-.card{
-  background-color: #FFFFFF;
-  width: 300px;
-  height: 312px;
-}
+//.card{
+//  //background-color: #FFFFFF;
+//  border-radius: 16px;
+//  border: 3px solid blue;
+//  width: 300px;
+//  height: 312px;
+//  flex-basis: calc(25% - 20px);
+//  margin: 10px;
+//}
