--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  border: 2px solid black;
 }
 //.main{
 //  margin-top: 24px;
