feat: fix bugs for styles

--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -1,6 +1,7 @@
 .header {
   width: 1290px;
   height: 80px;
+  margin: 0 auto;
   background-color: #EBA000;
   display: flex;
   border-radius: 16px;
