--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -1,8 +1,8 @@
 .main {
   display: grid;
-  padding: 20px;
-  //width: 1290px;
+  margin: 22px 10px 10px 110px;
   height: 312px;
+  width: 100px;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 20px;
@@ -10,6 +10,28 @@
 "card1 card2 card3 card4"
 "card5 card6 card7 card8"
 "card9 card10 card11 card12";
-  //margin-left:10px;
 }
-
+.footer{
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-top: 40%;
+}
+.buttonHeader{
+  width: 324px;
+  height: 56px;
+  border-radius: 16px
+}
+.prev{
+  width: 83px;
+  border-radius: 16px;
+  margin-left: 50px;
+  height: 48px;
+}
+.next{
+  width: 83px;
+  background-color: #EBA000;
+  border-radius: 16px;
+  margin-left: 16px;
+  height: 48px;
+}
