--- a/src/features/cards/Card.module.css
+++ b/src/features/cards/Card.module.css
@@ -2,6 +2,10 @@
     border-radius: 16px;
     border: 3px solid #c6c5c9;
     width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .modalOverlay {
