--- a/src/features/cards/Card.module.css
+++ b/src/features/cards/Card.module.css
@@ -34,11 +34,34 @@
 }
 
 .close {
-    color: #aaa;
+    color: #e36969;
     float: right;
     font-size: 28px;
     font-weight: bold;
     margin-top: -10px;
     margin-right: -10px;
     cursor: pointer;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+}
+
+
+.modalButton {
+    background: linear-gradient(to bottom, #4CAF50, #2E7D32);
+    border: none;
+    border-radius: 20px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.2s ease-in-out;
+}
+
+.modalButton:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.16), 0 6px 12px rgba(0, 0, 0, 0.23);
 }
